--- a/Spark_HBase/pom.xml
+++ b/Spark_HBase/pom.xml
@@ -8,88 +8,99 @@
     <artifactId>Spark_HBase</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <repositories>
-        <repository>
-            <id>Cloudera</id>
-            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-        </repository>
-    </repositories>
+    <licenses>
+        <license>
+            <name>Choose License</name>
+            <url>http://....</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>scala-tools.org</id>
+            <name>Scala-tools Maven2 Repository</name>
+            <url>http://scala-tools.org/repo-releases</url>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <encoding>UTF-8</encoding>
+        <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
+        <scoverage.plugin.version>1.3.0</scoverage.plugin.version>
+        <scala.version>2.11.8</scala.version>
+        <scoverage.scalacPluginVersion>1.3.0</scoverage.scalacPluginVersion>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.8</version>
-            <scope>provided</scope>
+            <version>2.10.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>2.2.0</version>
-            <scope>provided</scope>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>1.6.0</version>
         </dependency>
-        <!--
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.10</artifactId>
             <version>1.6.0</version>
             <scope>provided</scope>
         </dependency>
-        -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
-            <version>2.2.0</version>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>1.6.0</version>
             <scope>provided</scope>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/it.nerdammer.bigdata/spark-hbase-connector -->
-        <dependency>
-            <groupId>it.nerdammer.bigdata</groupId>
-            <artifactId>spark-hbase-connector_2.10</artifactId>
-            <version>1.0.3</version>
-        </dependency>
-
-        <!--
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>2.10.6</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-catalyst_2.10</artifactId>
             <version>1.6.0</version>
-            <scope>provided</scope>
         </dependency>
-        -->
-        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-spark -->
+
         <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-spark</artifactId>
-            <version>1.2.0-cdh5.8.0</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>1.2.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-common -->
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-common</artifactId>
             <version>1.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.liftweb</groupId>
+            <artifactId>lift-json_2.10</artifactId>
+            <version>2.6.3</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <sourceDirectory>src/main/scala</sourceDirectory>
         <testSourceDirectory>src/test/scala</testSourceDirectory>
-
         <plugins>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
@@ -104,18 +115,17 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                    <!--
                     <artifactSet>
                         <excludes>
                             <exclude>commons-logging:commons-logging</exclude>
                         </excludes>
                     </artifactSet>
-                    -->
                     <minimizeJar>true</minimizeJar>
                 </configuration>
                 <executions>
