--- a/Spark_HBase/pom.xml
+++ b/Spark_HBase/pom.xml
@@ -44,6 +44,7 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>2.2.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
