--- a/Spark_HBase/pom.xml
+++ b/Spark_HBase/pom.xml
@@ -40,33 +40,11 @@
             <artifactId>scala-library</artifactId>
             <version>2.11.8</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>2.2.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
-            <version>2.2.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
-            <version>2.2.0</version>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-reflect</artifactId>
             <version>2.11.8</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-catalyst_2.11</artifactId>
-            <version>2.2.0</version>
         </dependency>
 
         <dependency>
@@ -84,6 +62,13 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-common</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-rest -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-rest</artifactId>
             <version>1.2.0</version>
         </dependency>
 
@@ -128,11 +113,13 @@
                 <version>2.3</version>
                 <configuration>
                     <artifactSet>
+                        <!--
                         <excludes>
                             <exclude>commons-logging:commons-logging</exclude>
                         </excludes>
+                        -->
                     </artifactSet>
-                    <minimizeJar>true</minimizeJar>
+                    <minimizeJar>false</minimizeJar>
                 </configuration>
                 <executions>
                     <execution>
